--- a/loginPage.html
+++ b/loginPage.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<div class="logo">
-			<img src="logo.png" alt="Logo">
+			<img src="assets/images/logo.png" alt="Logo">
 		</div>
 		<div class="square">
 			<i style="--clr:#9b6ef3;"></i>
