--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <h3>Home</h3>   
                     </a>
                     <a class="menu-item">
-                        <span><i class="uil uil-compass"></i></span>
+                        <span><i class="uil uil-star"></i></span>
                         <h3>Starfall</h3>
                     </a>
                     <a class="menu-item"  id="notifications">
@@ -101,7 +101,7 @@
                         <h3>Profile</h3>
                     </a>
                     <a class="menu-item">
-                        <span><i class="uil uil-setting"></i></span>
+                        <span><i class="uil uil-bookmark"></i></span>
                         <h3>Level</h3>
                     </a>
                     <a class="menu-item">
@@ -338,7 +338,7 @@
             <!----------------- RIGHT -------------------->
             <div class="right">
                 <div class="search-bar">
-                    <i class="uil uil-search"></i>
+                    <i class="uil uil-search" style="color: grey;"></i>
                     <input type="search" placeholder="Search ">
                 </div>
                 <!------- WWHO TO FOLLOW ------->
@@ -396,7 +396,7 @@
 
                 <div>
                     <footer>
-                        <p>&copy; 2024 MySpace. Tüm hakları saklıdır.</p>
+                        <p>&copy; 2024 MySpace.</p>
                     </footer>
                 </div>
             </div>
