--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mySocial - Responsive Social Media Website Using HTML, CSS, & JavaScript</title>
     <!-- IconScout CDN -->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -23,15 +23,15 @@
                 <!----------------- SIDEBAR -------------------->
                 <div class="sidebar">
                     <a class="menu-item active">
-                        <span><i class="uil uil-home"></i></span>
+                        <span><i class="bi bi-house"></i></span>
                         <h3>Home</h3>   
                     </a>
                     <a class="menu-item">
-                        <span><i class="uil uil-star"></i></span>
+                        <span><i class="bi bi-stars"></i></span>
                         <h3>Starfall</h3>
                     </a>
                     <a class="menu-item"  id="notifications">
-                        <span><i class="uil uil-bell"><small class="notification-count">9+</small></i></span>
+                        <span><i class="bi bi-bell"><small class="notification-count">9+</small></i></span>
                         <h3>Notifications</h3>
                         <!--------------- NOTIFICATION POPUP --------------->
                         <div class="notifications-popup">
@@ -93,19 +93,19 @@
                         <!--------------- END NOTIFICATION POPUP --------------->
                     </a>
                     <a class="menu-item" id="messages-notifications">
-                        <span><i class="uil uil-envelope-alt"><small class="notification-count">6</small></i></span>
+                        <span><i class="bi bi-chat-left"><small class="notification-count">6</small></i></span>
                         <h3>Messages</h3>
                     </a>
                     <a class="menu-item">
-                        <span><i class="uil uil-bookmark"></i></span>
+                        <span><i class="bi bi-person"></i></span>
                         <h3>Profile</h3>
                     </a>
                     <a class="menu-item">
-                        <span><i class="uil uil-bookmark"></i></span>
+                        <span><i class="bi bi-rocket"></i></span>
                         <h3>Level</h3>
                     </a>
                     <a class="menu-item">
-                        <span><i class="uil uil-setting"></i></span>
+                        <span><i class="bi bi-gear"></i></span>
                         <h3>Settings</h3>
                     </a>
                 </div>
@@ -156,7 +156,7 @@
                                 </div>
                             </div>
                             <span class="edit">
-                                <i class="uil uil-ellipsis-h"></i>
+                                <i class="bi bi-three-dots"></i>
                             </span>
                         </div>
 
@@ -166,9 +166,9 @@
 
                         <div class="action-buttons">
                             <div class="interaction-buttons">
-                                <span><i class="uil uil-heart"></i></span>
-                                <span><i class="uil uil-comment-dots"></i></span>
-                                <span><i class="uil uil-share-alt"></i></span>
+                                <span><i class="bi bi-star"></i></span>
+                                <span><i class="bi bi-chat"></i></span>
+                                <span><i class="bi bi-stars"></i></span>
                             </div>
                         </div>
 
@@ -338,7 +338,7 @@
             <!----------------- RIGHT -------------------->
             <div class="right">
                 <div class="search-bar">
-                    <i class="uil uil-search" style="color: grey;"></i>
+                    <i class="bi bi-search" style="color: grey;"></i>
                     <input type="search" placeholder="Search ">
                 </div>
                 <!------- WWHO TO FOLLOW ------->
@@ -403,5 +403,6 @@
             <!----------------- END OF RIGHT -------------------->
         </div>
     </main>
+    <script src = "index.js"></script>
 </body>
 </html>
