--- a/Messages.html
+++ b/Messages.html
@@ -130,12 +130,17 @@
 
             <!----------------- MIDDLE -------------------->
             <div class="middle">
-                <!----------------- MESSAGES -------------------->
+                <!------- MESSAGES ------->
                 <div class="messages">
                     <div class="heading">
                         <h4>Messages</h4>
                     </div>
-                    <!------- MESSAGES 1------->
+                    <!------- SEARCH BAR ------->
+                    <div class="search-bar">
+                        <i class="bi bi-search"></i>
+                        <input type="search" placeholder="Search messages" id="message-search">
+                    </div>
+                    <!------- MESSAGES ------->
                     <div class="message">
                         <div class="profile-photo">
                             <img src="assets/images/logo2.png">
@@ -145,7 +150,7 @@
                             <p class="text-muted">Just woke up bruh</p>
                         </div>
                     </div>
-                    <!------- MESSAGES 2------->
+                    <!------- MESSAGES ------->
                     <div class="message">
                         <div class="profile-photo">
                             <img src="assets/images/logo2.png">
@@ -155,7 +160,7 @@
                             <p class="text-bold">2 new messages</p>
                         </div>
                     </div>
-                    <!------- MESSAGES 3------->
+                    <!------- MESSAGES ------->
                     <div class="message">
                         <div class="profile-photo">
                             <img src="assets/images/logo2.png">
@@ -166,7 +171,7 @@
                             <p class="text-muted">lol u right</p>
                         </div>
                     </div>
-                    <!------- MESSAGES 4------->
+                    <!------- MESSAGES ------->
                     <div class="message">
                         <div class="profile-photo">
                             <img src="assets/images/logo2.png">
@@ -176,7 +181,7 @@
                             <p class="text-muted">Birtday Tomorrow</p>
                         </div>
                     </div>
-                    <!------- MESSAGES 5------->
+                    <!------- MESSAGES ------->
                     <div class="message">
                         <div class="profile-photo">
                             <img src="assets/images/logo2.png">
@@ -187,7 +192,7 @@
                             <p class="text-bold">5 new messages</p>
                         </div>
                     </div>
-                    <!------- MESSAGES 6------->
+                    <!------- MESSAGES ------->
                     <div class="message">
                         <div class="profile-photo">
                             <img src="assets/images/logo2.png">
@@ -197,9 +202,8 @@
                             <p class="text-muted">haha got that!</p>
                         </div>
                     </div>
-                    
                 </div>
-                <!----------------- END OF FEEDS -------------------->
+                <!------- END OF MESSAGES ------->
             </div>
              <!----------------- END OF MIDDLE -------------------->
 
