--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
                         <div class="notifications-popup">
                             <div>
                                 <div class="profile-photo">
-                                    <img src="./images/profile-2.jpg">
+                                    <img src="assets/images/logo2.png">
                                 </div>
                                 <div class="notification-body">
                                     <b>Keke Benjamin</b> accepted your friend request
@@ -47,7 +47,7 @@
                             </div>
                             <div>
                                 <div class="profile-photo">
-                                    <img src="./images/profile-3.jpg">
+                                    <img src="assets/images/logo2.png">
                                 </div>
                                 <div class="notification-body">
                                     <b>John Doe</b> commented on your post
@@ -56,7 +56,7 @@
                             </div>
                             <div>
                                 <div class="profile-photo">
-                                    <img src="./images/profile-4.jpg">
+                                    <img src="assets/images/logo2.png">
                                 </div>
                                 <div class="notification-body">
                                     <b>Marry Oppong</b> and <b>283 Others</b> liked your post
@@ -65,7 +65,7 @@
                             </div>
                             <div>
                                 <div class="profile-photo">
-                                    <img src="./images/profile-5.jpg">
+                                    <img src="assets/images/logo2.png">
                                 </div>
                                 <div class="notification-body">
                                     <b>Doris Y. Lartey</b> commented on a post you are tagged in
@@ -74,7 +74,7 @@
                             </div>
                             <div>
                                 <div class="profile-photo">
-                                    <img src="./images/profile-6.jpg">
+                                    <img src="assets/images/logo2.png">
                                 </div>
                                 <div class="notification-body">
                                     <b>Keyley Jenner</b> commented on a post you are tagged in
@@ -83,7 +83,7 @@
                             </div>
                             <div>
                                 <div class="profile-photo">
-                                    <img src="./images/profile-7.jpg">
+                                    <img src="assets/images/logo2.png">
                                 </div>
                                 <div class="notification-body">
                                     <b>Jane Doe</b> commented on your post
@@ -336,7 +336,7 @@
                     <div class="follow">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./images/profile-20.jpg">
+                                <img src="assets/images/logo2.png">
                             </div>
                             <div>
                                 <h5>Hajia Bintu</h5>
@@ -345,14 +345,14 @@
                         </div>
                         <div class="action">
                             <button class="btn btn-primary">
-                                Accept
+                                Follow
                             </button>                            
                         </div>
                     </div>
                     <div class="follow">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./images/profile-18.jpg">
+                                <img src="assets/images/logo2.png">
                             </div>
                             <div>
                                 <h5>Edelson Mandela</h5>
@@ -361,14 +361,14 @@
                         </div>
                         <div class="action">
                             <button class="btn btn-primary">
-                                Accept
+                                Follow
                             </button>
                         </div>
                     </div>
                     <div class="follow">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./images/profile-17.jpg">
+                                <img src="assets/images/logo2.png">
                             </div>
                             <div>
                                 <h5>Megan Baldwin</h5>
@@ -377,7 +377,7 @@
                         </div>
                         <div class="action">
                             <button class="btn btn-primary">
-                                Accept
+                                Follow
                             </button>
                         </div>
                     </div>
